# MCP_DemoMetrics

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  code_review.py  demo_example.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-guardrails.yml
src/: __init__.py  api.py  code_review_agent.py  config.py  metrics.py  visualizer.py
tests/: conftest.py  test_api.py  test_code_review.py  test_visualizer.py
