[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-demo-metrics"
version = "0.1.0"
description = "MCP Server Client Demo with Seaborn Visualizations and Python Guardrails"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Demo Team", email = "demo@example.com"}
]
keywords = ["mcp", "seaborn", "visualization", "metrics"]

dependencies = [
    "requests>=2.31.0",
    "seaborn>=0.13.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "isort>=5.12.0",
    "autopep8>=2.0.0",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "seaborn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=80"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0302",  # Too many lines
    "R0913",  # Too many arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 7
max-args = 5

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.bandit]
exclude_dirs = ["tests", "venv"]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309"]
